GNOME Bugzilla – Bug 731946
Removing a task result in error, but succeeds
Last modified: 2014-06-20 10:03:14 UTC
gdata_tasks_service_delete_task() fails to me with error > Error code 204 when deleting an entry: No Content but the task is properly removed from the server. This is with libgdata 0.15.1. This error is returned as GDATA_SERVICE_ERROR_PROTOCOL_ERROR. I'd say this particular error should be ignored.
Can you get a debug log which shows the problem please? I think I know where the fix needs to be, but I’d like to have a log for posterity. Thanks. As always, please redact any personal data. LIBGDATA_DEBUG=3 G_MESSAGES_DEBUG=all evolution-calendar-factory -r -w &> my-log.log
Created attachment 278825 [details] [review] core: Handle SOUP_STATUS_NO_CONTENT in response to DELETE requests The Google Tasks API apparently returns HTTP status 204 in response to a successful DELETE request on a task entry, rather than the status 200 which is returned by all the other services. Handle the two statuses as equivalent.
Created attachment 278827 [details] Log of the problem For reference, here’s Milan’s log of the problem.
Milan tested it and reported the patch as working on IRC. Merged! Attachment 278825 [details] pushed as aaafd11 - core: Handle SOUP_STATUS_NO_CONTENT in response to DELETE requests