core: Handle SOUP_STATUS_NO_CONTENT in response to DELETE requests

The Google Tasks API apparently returns HTTP status 204 in response to a
successful DELETE request on a task entry, rather than the status 200
which is returned by all the other services.

Handle the two statuses as equivalent.

https://bugzilla.gnome.org/show_bug.cgi?id=731946